opam-version: "2.0"
name: "reason-dev"
version: "dev"
maintainer: "Jordan Walke <jordojw@gmail.com>"

build: [
  ["dune" "build" "-p" name "-j" jobs] {dev}
  ["dune" "runtest" "-p" name "-j" jobs] {dev}
]

depends: [
  "rely"
  "cli"
  "file-context-printer"
  "pastel"
]

pin-depends: [
  [ "cli.dev" "git+ssh://git@github.com/facebookexperimental/reason-native.git" ]
  [ "file-context-printer.dev" "git+ssh://git@github.com/facebookexperimental/reason-native.git" ]
  [ "pastel.dev" "git+ssh://git@github.com/facebookexperimental/reason-native.git" ]
  [ "rely.dev" "git+ssh://git@github.com/facebookexperimental/reason-native.git" ]
]

synopsis: "reason-dev: The package that runs the tests"
description: """
reason-dev runs a few snapshot tests to ensure bla"""
