opam-version: "2.0"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [ "Jordan Walke <jordojw@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/facebook/reason"
doc: "http://reasonml.github.io/"
bug-reports: "https://github.com/facebook/reason/issues"
dev-repo: "git://github.com/facebook/reason.git"
tags: [ "syntax" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"         {>= "4.02" & < "4.12"}
  "dune"          {>= "1.4"}
  "ocamlfind"     {build}
  "menhir"        {>= "20170418"}
  "merlin-extend" {>= "0.6"}
  "fix"
  "result"
  "ocaml-migrate-parsetree" {< "2.0.0"}
]
synopsis: "Reason: Syntax & Toolchain for OCaml"
description: """
Reason gives OCaml a new syntax that is remniscient of languages like
JavaScript. It's also the umbrella project for a set of tools for the OCaml &
JavaScript ecosystem."""
