opam-version: "2.0"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [ "Jordan Walke <jordojw@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/reasonml/reason"
doc: "https://reasonml.github.io/"
bug-reports: "https://github.com/reasonml/reason/issues"
dev-repo: "git+https://github.com/reasonml/reason.git"
tags: [ "syntax" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "4.03" & < "5.1"}
  "dune"          {>= "2.3"}
  "ocamlfind"     {build}
  "menhir"        {>= "20180523"}
  "merlin-extend" {>= "0.6"}
  "fix"
  "result"
  "ppx_derivers"
]
synopsis: "Reason: Syntax & Toolchain for OCaml"
description: """
Reason gives OCaml a new syntax that is remniscient of languages like
JavaScript. It's also the umbrella project for a set of tools for the OCaml &
JavaScript ecosystem."""
