opam-version: "1.2"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [ "Jordan Walke <jordojw@gmail.com>" ]
license: "BSD"
homepage: "https://github.com/facebook/reason"
doc: "http://facebook.github.io/reason"
bug-reports: "https://github.com/facebook/reason/issues"
dev-repo: "git://github.com/facebook/reason.git"
tags: [ "syntax" ]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"               {build}
  "reason"
  "ocamlbuild"
]
depopts: [
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.05" ]