(env
 (_
  (env-vars
   (REFMT_PRINT_WIDTH 50))))

(cram
 (applies_to * \ lib rtopIntegration)
 (package reason)
 (deps
  %{bin:ocamlc}
  %{bin:refmt}
  ./lib/outcometreePrinter.exe
  ./lib/fdLeak.exe))

(cram
 (applies_to rtopIntegration)
 (package rtop)
 (enabled_if
  (or
   (= %{os_type} Unix)
   (and
    (= %{os_type} Win32)
    (>= %{ocaml_version} 5.0.0))))
 (deps %{bin:ocamlc} %{bin:rtop}))
