(env
 (_
  (env-vars
   (REFMT_PRINT_WIDTH 50))))

(cram
 (applies_to * \ lib rtopIntegration)
 (package reason)
 (deps
  %{bin:ocamlc}
  %{bin:refmt}
  ./lib/outcometreePrinter.exe
  ./lib/fdLeak.exe))

; rtopIntegration on Windows requires lambda-term with the ConPTY segfault fix.
; See: https://github.com/ocaml-community/lambda-term/pull/125
; On Windows, only enabled for OCaml >= 5.0 (opam-ci pins the fixed lambda-term).
; esy-ci uses 4.14 so the test is naturally skipped there.
(cram
 (applies_to rtopIntegration)
 (package rtop)
 (enabled_if
  (or
   (= %{os_type} Unix)
   (and
    (= %{os_type} Win32)
    (>= %{ocaml_version} 5.0.0))))
 (deps %{bin:ocamlc} %{bin:rtop}))
