(ocamllex
 (modules reason_lexer))

; Use select.exe from janestreet/ppx_ast to choose lexer_warning.ml based on ocaml version

(rule
 (targets lexer_warning.ml)
 (deps ../generate/select.exe lexer_warning.ml-4.08 lexer_warning.ml-4.07
   lexer_warning.ml-4.06 lexer_warning.ml-default)
 (action
  (with-stdout-to
   %{targets}
   (run ../generate/select.exe lexer_warning.ml-4.08 lexer_warning.ml-4.07
     lexer_warning.ml-4.06 lexer_warning.ml-default))))

(rule
 (targets reason_string.ml)
 (deps ../generate/select.exe reason_string.ml-4.02 reason_string.ml-default)
 (action
  (with-stdout-to
   %{targets}
   (run ../generate/select.exe reason_string.ml-4.02 reason_string.ml-default))))

; Update error messages based on new grammar
; Previously, called update_error in the `Makefile`.
; TODO: Get rid of bash-isms here to support cross-platform.

(rule
 (targets reason_parser.messages)
 (deps reason_parser.mly reason_parser.messages.checked-in)
 (action
  (with-stdout-to
   %{targets}
   (bash
     "menhir --explain --strict --unused-tokens ./reason_parser.mly --update-errors ./reason_parser.messages.checked-in | sed -e 's/[[:space:]]*$$//g'"))))

; Previously, make preprocess.

(rule
 (targets reason_parser.cmly reason_parser.ml reason_parser.mli)
 (deps reason_parser.mly reason_parser.messages)
 (action
  (run menhir --strict --unused-tokens --fixed-exception --table --cmly
    reason_parser.mly)))

; (menhir
; ; (targets reason_parser.cmly reason_parser.ml reason_parser.mli)
; (modules reason_parser reason_parser.messages)
; (flags (:standard --strict --unused-tokens --fixed-exception --table --cmly)))

(executables
 (names menhir_error_processor)
 (modules menhir_error_processor)
 (libraries unix menhirSdk))

(rule
 (targets reason_parser_explain_raw.ml)
 (deps reason_parser.cmly)
 (action
  (with-stdout-to
   %{targets}
   (run ./menhir_error_processor.exe reason_parser.cmly))))

; Previously, make compiler_error

(rule
 (targets reason_parser_message.ml)
 (deps reason_parser.mly reason_parser.messages)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --explain --strict --unused-tokens reason_parser.mly
     --compile-errors reason_parser.messages))))

(rule
 (targets reason_oprint.ml)
 (deps
  (:first-dep reason_oprint.cppo.ml))
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} -D BS_NO_COMPILER_PATCH
    %{first-dep} -o %{targets})))

(rule
 (targets reason_syntax_util.ml)
 (deps
  (:first-dep reason_syntax_util.cppo.ml))
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} -D BS_NO_COMPILER_PATCH
    %{first-dep} -o %{targets})))

(rule
 (targets reason_syntax_util.mli)
 (deps
  (:first-dep reason_syntax_util.cppo.mli))
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} -D BS_NO_COMPILER_PATCH
    %{first-dep} -o %{targets})))

(library
 (name reason)
 ; Uncomment to allow make coverage target to work
 ; requires you to have run $ opam install bisect_ppx
 ;  (preprocess (pps (bisect_ppx)))
 (public_name reason)
 (wrapped false)
 (flags
  (:standard -w -9-52 -safe-string))
 (modules lexer_warning reason_syntax_util reason_comment reason_attributes
   reason_layout reason_heuristics reason_location reason_toolchain
   reason_config reason_pprint_ast reason_parser reason_lexer
   reason_parser_message reason_oprint reason_parser_explain_raw
   reason_parser_explain reason_string)
 (libraries ocaml-migrate-parsetree menhirLib reason.easy_format))
