(library
 (name rtop)
 (public_name rtop)
 (modules reason_util reason_utop)
 (wrapped false)
 (modes byte)
 (libraries compiler-libs.common menhirLib reason.easy_format reason utop reason.ocaml-migrate-parsetree))

(executable
 (name rtop)
 (public_name rtop)
 (package rtop)
 (modules rtop)
 (link_flags -linkall)
 (modes byte)
 (libraries rtop))
