(rule
 (targets outcometreePrinter.ml)
 (deps outcometreePrinter.cppo.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(executable
 (name outcometreePrinter)
 (libraries reason)
 (modules outcometreePrinter))

(executable
 (name fdLeak)
 (modules fdLeak)
 (libraries reason.refmt-lib))
