(rule
 (targets outcometreePrinter.ml)
 (deps outcometreePrinter.cppo.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(executable
 (name outcometreePrinter)
 (libraries reason)
 (flags :standard -open StdLabels)
 (modules outcometreePrinter))

(executable
 (name fdLeak)
 (modules fdLeak)
 (flags :standard -open StdLabels)
 (libraries reason.refmt-lib))
