(executable
 (name add_special_comments)
 (modules add_special_comments)
 (libraries compiler-libs.common compiler-libs.bytecomp)
 (flags :standard -w -3)
 (enabled_if
  (>= %{ocaml_version} 4.13)))

(executables
 (names pp)
 (modules pp pp_rewrite)
 (libraries compiler-libs.common compiler-libs.bytecomp)
 (flags :standard -w -3))

(ocamllex pp_rewrite)

(executable
 (name gencopy)
 (enabled_if
  (>= %{ocaml_version} 5.2))
 (modules gencopy)
 (libraries compiler-libs.common compiler-libs.bytecomp)
 (flags :standard -w -3))
