(executable
 (name add_special_comments)
 (modules add_special_comments)
 (libraries compiler-libs.common compiler-libs.bytecomp)
 (enabled_if
  (>= %{ocaml_version} 4.13)))

(executable
 (name pp)
 (modules pp pp_rewrite)
 (libraries compiler-libs.common compiler-libs.bytecomp))

(ocamllex pp_rewrite)

(executable
 (name gencopy)
 (enabled_if
  (>= %{ocaml_version} 5.4))
 (modules gencopy)
 (libraries compiler-libs.common compiler-libs.bytecomp))
